--- a/src/mobintouch/_public/index.html
+++ b/src/mobintouch/_public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
-    <meta name="format-detection">
+    <meta name="format-detection" />
 
     <!-- FOR SEO SEARCH -->
     <link rel="canonical" href="https://mobintouch.co.kr/">
@@ -26,7 +26,7 @@
     <meta name="Copyright" content="모비데이즈(MOBIDAYS)" />
     <meta name="reply-to" content="http://www.mobidays.com" />
 
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index, follow" />
     <meta name="robots" content="noarchive" />
     
     <!-- favicon -->
